--- a/project/src/main/res/drawable/cars_fake_spinner.xml
+++ b/project/src/main/res/drawable/cars_fake_spinner.xml
@@ -1,21 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <corners android:radius="4dp" />
-            <solid android:color="#ACACAC" />
-        </shape>
-    </item>
-    <item android:state_focused="true">
-        <shape android:shape="rectangle">
-            <corners android:radius="4dp" />
-            <solid android:color="#ACACAC" />
-        </shape>
-    </item>
-    <item>
-        <shape android:shape="rectangle">
-            <corners android:radius="4dp" />
-            <solid android:color="#F6F6F6" />
-        </shape>
-    </item>
+    <item android:state_pressed="true" android:drawable="@drawable/spinner_pressed" />
+    <item android:state_focused="true" android:drawable="@drawable/spinner_pressed" />
+    <item android:drawable="@drawable/spinner" />
 </selector>
