--- a/project/src/main/res/layout/payment_widget.xml
+++ b/project/src/main/res/layout/payment_widget.xml
@@ -1,92 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.widget.PaymentWidget xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/payment_info_card_view"
     android:layout_width="match_parent"
-    android:animateLayoutChanges="true"
-    android:layout_height="wrap_content"
-    android:background="#FFF"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:layout_marginTop="12dp"
-    android:layout_marginLeft="9dp"
-    android:layout_marginRight="9dp"
-    app:cardCornerRadius="3dp"
-    app:cardElevation="1dp">
+    android:layout_height="wrap_content">
+
+    <com.expedia.bookings.widget.LinearLayout
+        android:id="@+id/card_info_container"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:orientation="horizontal">
+
+        <com.expedia.bookings.widget.RoundImageView
+            android:id="@+id/card_info_icon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="16dp"
+            android:src="@drawable/cars_checkout_cc_default_icon" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingLeft="15dp">
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/card_info_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center|left"
+                android:singleLine="true"
+                android:textSize="16sp"
+                app:textStyle="medium" />
+
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/card_info_expiration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center|left"
+                android:singleLine="true"
+                android:text="Expired 11/15"
+                android:textSize="13sp" />
+        </LinearLayout>
+
+        <com.expedia.bookings.widget.ContactDetailsCompletenessStatusImageView
+            android:id="@+id/card_info_status_icon"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="16dp" />
+
+    </com.expedia.bookings.widget.LinearLayout>
 
     <LinearLayout
+        android:id="@+id/section_billing_info_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="16dp"
         android:orientation="vertical">
 
-        <include layout="@layout/checkout_payment_button" />
+        <com.expedia.bookings.widget.PaymentButton
+            android:id="@+id/payment_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="16dp"/>
 
         <com.expedia.bookings.widget.LinearLayout
             android:id="@+id/stored_card_container"
-            android:layout_height="64dp"
             android:layout_width="match_parent"
+            android:layout_height="64dp"
             android:orientation="horizontal">
 
-            <ImageView
+            <com.expedia.bookings.widget.RoundImageView
                 android:id="@+id/display_credit_card_brand_icon_tablet"
-                android:layout_marginLeft="16dp"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:src="@drawable/cars_checkout_cc_default_icon" />
 
-            <LinearLayout
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/stored_card_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingLeft="16dp"
                 android:layout_gravity="center_vertical"
-                android:orientation="vertical"
-                android:paddingLeft="15dp"
-                android:layout_weight="1">
-
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/stored_card_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:gravity="center|left"
-                    app:textStyle="medium"
-                    android:textSize="16sp" />
-
-                <com.expedia.bookings.widget.TextView
-                    android:id="@+id/stored_card_expiration"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:gravity="center|left"
-                    android:text="Expired 11/15"
-                    android:textSize="13sp" />
-            </LinearLayout>
-
-            <com.expedia.bookings.widget.CarDriverCheckoutStatusLeftImageView
-                android:id="@+id/paymentStatusIcon"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="16dp" />
+                android:gravity="center|left"
+                android:singleLine="true"
+                android:textSize="16sp"
+                app:textStyle="medium" />
 
             <ImageView
                 android:id="@+id/remove_stored_card_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:padding="8dp"
-                android:layout_marginRight="16dp"
                 android:background="@drawable/bg_clickable_row"
+                android:padding="8dp"
                 android:src="@drawable/ic_log_out" />
 
         </com.expedia.bookings.widget.LinearLayout>
 
-        <com.expedia.bookings.section.SectionBillingInfo xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
+        <com.expedia.bookings.section.SectionBillingInfo
             android:id="@+id/section_billing_info"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:orientation="vertical">
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -105,13 +128,13 @@
                     android:id="@+id/edit_creditcard_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="48dp"
+                    android:layout_gravity="bottom"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
                     android:hint="@string/credit_card_hint"
-                    android:layout_gravity="bottom"
-                    app:numberFormat="creditcard"
-                    android:singleLine="true" />
+                    android:paddingLeft="48dp"
+                    android:singleLine="true"
+                    app:numberFormat="creditcard" />
             </FrameLayout>
 
             <LinearLayout
@@ -124,8 +147,8 @@
                     android:id="@+id/edit_creditcard_exp_text_btn"
                     style="@style/CarFakeSpinner.Light"
                     android:layout_width="0dp"
-                    android:layout_weight="3"
                     android:layout_height="wrap_content"
+                    android:layout_weight="3"
                     android:bufferType="spannable"
                     android:hint="@string/expiration_date"
                     android:textSize="18dp" />
@@ -150,16 +173,18 @@
                 android:id="@+id/cardholder_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/cardholder"
                 android:layout_marginBottom="8dp"
+                android:text="@string/cardholder"
+                android:paddingLeft="4dp"
                 android:textSize="@dimen/data_form_section_header_text"
                 android:textStyle="bold" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:paddingLeft="12dp"
-                android:background="#635C5C5C" />
+                android:background="#635C5C5C"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"/>
 
             <EditText
                 android:id="@+id/edit_name_on_card"
@@ -172,5 +197,5 @@
         </com.expedia.bookings.section.SectionBillingInfo>
     </LinearLayout>
 
-</com.expedia.bookings.widget.PaymentWidget>
+</merge>
 
