--- a/project/src/main/res/layout/widget_car_checkout.xml
+++ b/project/src/main/res/layout/widget_car_checkout.xml
@@ -9,18 +9,17 @@
         android:paddingTop="?attr/actionBarSize"
         android:layout_width="match_parent"
         android:id="@+id/checkout_scroll"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:animateLayoutChanges="true"
             android:orientation="vertical"
-            android:paddingBottom="200dp"
             android:layout_height="wrap_content">
 
             <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/summery_container"
+                android:id="@+id/summary_container"
                 android:layout_width="match_parent"
                 android:animateLayoutChanges="true"
                 android:layout_height="wrap_content"
@@ -167,7 +166,14 @@
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
 
-            <include layout="@layout/login_widget" />
+            <com.expedia.bookings.widget.AccountLoginWidget
+                style="@style/CarsCardView"
+                android:id="@+id/login_widget"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginRight="9dp"/>
 
             <LinearLayout
                 android:id="@+id/hint_container"
@@ -203,9 +209,23 @@
 
             </LinearLayout>
 
-            <include layout="@layout/car_driver_widget" />
+            <com.expedia.bookings.widget.CarDriverWidget
+                style="@style/CarsCardView"
+                android:id="@+id/driver_info_card_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginRight="9dp"/>
 
-            <include layout="@layout/payment_widget" />
+            <com.expedia.bookings.widget.PaymentWidget
+                style="@style/CarsCardView"
+                android:id="@+id/payment_info_card_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginLeft="9dp"
+                android:layout_marginRight="9dp"/>
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/legal_information_text_view"
@@ -214,6 +234,9 @@
                 android:textSize="10sp"
                 android:padding="16dp" />
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="200dp" />
         </LinearLayout>
     </com.expedia.bookings.widget.ScrollView>
 
