--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -85,4 +85,13 @@
         <item name="android:textColor">@color/cars_actionbar_text_color</item>
     </style>
 
+    <style name="CarsCardView" parent="V2.Theme.Cars">
+        <item name="android:background">#FFF</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+        <item name="android:animateLayoutChanges">true</item>
+        <item name="android:textColor">@color/cars_actionbar_text_color</item>
+        <item name="cardCornerRadius">3dp</item>
+        <item name="cardElevation">1dp</item>
+    </style>
+
 </resources>
