--- a/project/src/main/res/layout/traveler_contact_details_widget.xml
+++ b/project/src/main/res/layout/traveler_contact_details_widget.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:id="@+id/driver_info_container"
+        android:id="@+id/traveler_contact_info_container"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:orientation="horizontal">
@@ -26,17 +26,16 @@
             android:paddingLeft="15dp">
 
             <com.expedia.bookings.widget.TextView
-                android:id="@+id/driver_info_text"
+                android:id="@+id/enter_details_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center|left"
                 android:singleLine="true"
-                android:text="@string/enter_driver_details"
                 android:textSize="16sp"
                 app:textStyle="medium" />
 
             <com.expedia.bookings.widget.TextView
-                android:id="@+id/driver_phone_text"
+                android:id="@+id/traveler_phone_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center|left"
