--- a/project/src/main/res/values/styles_lx.xml
+++ b/project/src/main/res/values/styles_lx.xml
@@ -2,10 +2,34 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="V2.Theme.LX" parent="@style/Theme.AppCompat.Light">
+        <item name="windowActionBar">false</item>
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:dropDownListViewStyle">@style/DropDownListViewStyle</item>
-        <item name="calendar_month_tint_color">@color/lx_primary_color</item>
+        <item name="primary_color">@color/lx_primary_color</item>
+        <item name="checkout_card_view_style">@style/LXCardView</item>
+        <item name="checkout_slider_text">@string/lx_slider_text</item>
+        <item name="toolbar_title_style">@style/LXToolbarTitleTextAppearance</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:colorPrimaryDark">#532C45</item>
+        <item name="android:colorButtonNormal">@color/lx_primary_color</item>
+        <item name="colorControlNormal">#C3C3C3</item>
+        <item name="android:actionMenuTextColor">#FFFFFF</item>
+
+        <!-- Required white label attr for login widget -->
+        <item name="skin_loginWithExpediaTitleText">@string/expedia_account</item>
+        <item name="skin_loginBookNowButtonDrawable">@drawable/btn_signin</item>
+        <item name="skin_loginWithExpediaButtonText">@string/Log_in_with_Expedia</item>
+        <item name="skin_loginButtonColor">@android:color/black</item>
+        <item name="skin_passwordHint">@string/expedia_password_hint</item>
+        <item name="skin_loadingAccount">@string/loading_expedia_account</item>
+        <item name="skin_hotelCheckoutLoginButtonText">@string/Log_in_with_Expedia</item>
+        <item name="skin_phoneCheckoutLoginLogoDrawable">@drawable/ic_log_in</item>
+        <item name="skin_hotelCheckoutLogoutLogoDrawable">@drawable/ic_tablet_checkout_expedia_logo</item>
+        <item name="skin_tabletCheckoutLoginLogoDrawable">@drawable/ic_tablet_checkout_expedia_logo</item>
+        <item name="skin_tabletCheckoutLoginButtonTextColor">@color/login_text_tablet</item>
+        <item name="skin_phoneCheckoutLoginButtonTextColor">@color/login_text_hotels</item>
+        <item name="skin_phoneCheckoutLoginButtonDrawable">@drawable/btn_login_hotels</item>
     </style>
 
     <style name="DateRadioButton" parent="V2.Theme.LX">
@@ -34,6 +58,10 @@
         <item name="android:ellipsize">end</item>
     </style>
 
+    <style name="LXActionBarTitle" parent="V2.Theme.LX">
+        <item name="android:textStyle">normal</item>
+    </style>
+
     <style name="LXToolbarTitleTextAppearance" parent="V2.Theme.LX">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">#FFFFFF</item>
@@ -44,4 +72,12 @@
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
+    <style name="LXCardView" parent="V2.Theme.LX">
+        <item name="android:background">#FFF</item>
+        <item name="android:foreground">?android:attr/selectableItemBackground</item>
+        <item name="android:animateLayoutChanges">true</item>
+        <item name="android:textColor">@color/lx_actionbar_text_color</item>
+        <item name="cardCornerRadius">3dp</item>
+        <item name="cardElevation">1dp</item>
+    </style>
 </resources>
