--- a/project/src/main/res/values/attrs.xml
+++ b/project/src/main/res/values/attrs.xml
@@ -284,7 +284,7 @@
         <attr name="android:textColorLink" />
     </declare-styleable>
 
-    <declare-styleable name="DriverInfo">
+    <declare-styleable name="ContactDetailsCompleteness">
         <attr name="state">
             <enum name="begin" value="0" />
             <enum name="complete" value="1" />
