--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -250,5 +250,6 @@
     <color name="lx_ticket_summary_color">#5D5D5D</color>
     <color name="lx_ticket_title_color">#3A3A3A</color>
     <color name="lx_select_ticket_button_color">#7C7C7C</color>
+    <color name="lx_date_disabled_background_color">#D3D3D3</color>
 
 </resources>
