tvly-search-bar-fix

--- a/project/src/travelocity/res/layout/tablet_launch_collections_search_layout.xml
+++ b/project/src/travelocity/res/layout/tablet_launch_collections_search_layout.xml
@@ -8,6 +8,7 @@
         android:background="@drawable/bg_search_box"
         android:gravity="center"
         android:layout_gravity="top|center_horizontal"
+        android:layout_marginTop="@dimen/tablet_search_bar_top_margin"
         android:orientation="horizontal" >
 
         <com.expedia.bookings.widget.TextView
