--- a/project/src/travelocity/res/values-sw600dp/dimens.xml
+++ b/project/src/travelocity/res/values-sw600dp/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="launch_pin_detail_size_travelocity">200dp</dimen>
+    <dimen name="tablet_search_bar_top_margin">90dp</dimen>
 </resources>
