--- a/project/src/main/res/values/colors.xml
+++ b/project/src/main/res/values/colors.xml
@@ -245,6 +245,8 @@
 
     <color name="bg_checkout_saved_traveler_cc_row">#f0f0f0</color>
     <color name="bg_checkout_saved_traveler_cc_row_pressed">#dcdcdc</color>
+    <color name="bg_login_facebook_normal">#3B5998</color>
+    <color name="bg_login_facebook_pressed">#233A6A</color>
 
     <!-- LX colors -->
     <color name="lx_primary_color">#AF580A</color>
