--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -55,8 +55,8 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">16sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
     </style>
 
     <style name="CarsLoginFormEditText">
@@ -127,6 +127,13 @@
     <style name="CarOfferText">
         <item name="android:textColor">@color/cars_checkout_text_color</item>
         <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="CarsLoginEditText" parent="V2.Theme.Cars">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">#212121</item>
+        <item name="android:textColorHint">#9A9A9A</item>
     </style>
 
 </resources>
