--- a/project/src/main/res/layout/car_checkout_presenter.xml
+++ b/project/src/main/res/layout/car_checkout_presenter.xml
@@ -16,4 +16,10 @@
         android:layout_height="match_parent"
         android:visibility="gone" />
 
+    <com.expedia.bookings.widget.CVVEntryWidget
+        android:id="@+id/cvv"
+        android:background="#3A424C"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </com.expedia.bookings.presenter.CarCheckoutPresenter>
