--- a/project/src/main/res/values/styles_cars.xml
+++ b/project/src/main/res/values/styles_cars.xml
@@ -28,6 +28,10 @@
         <item name="skin_icCheckoutCheckmarkDrawable">@drawable/ic_checkout_checkmark</item>
 
         <item name="calendar_month_tint_color">@color/cars_primary_color</item>
+
+        <!-- CVV attrs -->
+        <item name="skin_cvvBookButtonKeypadDrawable">@drawable/btn_cvv_keypad_book</item>
+        <item name="skin_cvvBookButtonTextColor">@android:color/black</item>
     </style>
 
     <style name="CarsActionBarTitle" parent="V2.Theme.Cars">
@@ -92,6 +96,21 @@
         <item name="android:textColor">@color/cars_actionbar_text_color</item>
         <item name="cardCornerRadius">3dp</item>
         <item name="cardElevation">1dp</item>
+    </style>
+
+
+    <style name="CVVPromptBase">
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:layout_marginLeft">20dp</item>
+        <item name="android:layout_marginRight">20dp</item>
+        <item name="android:shadowColor">#2D000000</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:shadowRadius">.1</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
