--- a/project/src/main/res/drawable/cars_toogle_background_selector.xml
+++ b/project/src/main/res/drawable/cars_toogle_background_selector.xml
@@ -2,29 +2,29 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:state_checked="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/cars_actionbar_text_color" />
-            <corners android:radius="4dp" />
+            <solid android:color="#7c7c7c" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 
     <item android:state_checked="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/cars_primary_color" />
-            <corners android:radius="4dp" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/cars_primary_color" />
-            <corners android:radius="4dp" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/cars_actionbar_text_color" />
-            <corners android:radius="4dp" />
+            <solid android:color="#7c7c7c" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 
