--- a/project/src/main/res/layout/section_launch_list_card.xml
+++ b/project/src/main/res/layout/section_launch_list_card.xml
@@ -18,7 +18,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/launch_hotels_gradient_bottom"/>
+        android:background="@drawable/launch_hotels_gradient_bottom" />
 
     <com.expedia.bookings.widget.TextView
         android:id="@+id/launch_tile_upsell_text"
@@ -27,6 +27,7 @@
         android:layout_alignParentTop="true"
         android:layout_gravity="right"
         android:layout_marginRight="@dimen/launch_tile_hotel_sale_right_margin"
+        android:alpha=".9"
         android:background="@drawable/bg_launch_sale"
         android:drawablePadding="@dimen/launch_tile_hotel_sale_drawable_padding"
         android:paddingBottom="@dimen/launch_tile_hotel_sale_vertical_padding"
@@ -34,7 +35,6 @@
         android:paddingRight="@dimen/launch_tile_hotel_sale_horizontal_padding"
         android:paddingTop="@dimen/launch_tile_hotel_sale_vertical_padding"
         android:textColor="@color/launch_primary"
-        android:alpha=".9"
         android:visibility="gone"
         app:textStyle="bold" />
 
@@ -42,42 +42,47 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_margin="4dp">
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <com.expedia.bookings.widget.TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@+id/price"
-            android:orientation="vertical">
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="#ffffff"
+            android:textSize="15sp"
+            app:textStyle="light" />
 
-            <com.expedia.bookings.widget.TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="#ffffff"
-                android:textSize="17sp"
-                app:textStyle="light"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/title"
+            android:gravity="bottom">
 
             <com.expedia.bookings.widget.TextView
                 android:id="@+id/subtitle"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="left"
                 android:textColor="#ffffff"
-                android:textSize="14sp"
-                app:textStyle="light"/>
-        </LinearLayout>
+                android:textSize="12sp"
+                app:textStyle="light" />
 
-        <com.expedia.bookings.widget.TextView
-            android:id="@+id/price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:gravity="center_vertical"
-            android:textColor="#ffffff"
-            android:textSize="17sp"
-            android:textStyle="bold" />
+            <com.expedia.bookings.widget.TextView
+                android:id="@+id/price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="bottom"
+                android:textColor="#ffffff"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
     </RelativeLayout>
 </android.support.v7.widget.CardView>
