--- a/project/src/main/res/layout/widget_phone_launch.xml
+++ b/project/src/main/res/layout/widget_phone_launch.xml
@@ -2,7 +2,7 @@
 <com.expedia.bookings.widget.PhoneLaunchWidget xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ECEFF1"
+    android:background="@color/launch_list_bg"
     android:theme="@style/Theme.AppCompat.Light">
 
     <View
