--- a/project/src/main/res/layout/lx_base_layout.xml
+++ b/project/src/main/res/layout/lx_base_layout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.presenter.lx.LXPresenter
+<com.expedia.bookings.presenter.lx.LXPresenter xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/lx_base_presenter"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,9 +19,8 @@
         layout="@layout/widget_lx_search_params"
         android:visibility="gone" />
 
-    <include
+    <com.expedia.bookings.presenter.lx.LXCheckoutPresenter
         android:id="@+id/lx_checkout_presenter"
-        layout="@layout/lx_checkout_presenter"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone" />
