--- a/project/src/main/res/layout/lx_checkout_presenter.xml
+++ b/project/src/main/res/layout/lx_checkout_presenter.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.expedia.bookings.presenter.lx.LXCheckoutPresenter xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <include
+    <com.expedia.bookings.widget.LXCheckoutWidget
         android:id="@+id/checkout"
-        layout="@layout/widget_lx_checkout"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</com.expedia.bookings.presenter.lx.LXCheckoutPresenter>
+</merge>
